TS00708 - NguyenTrungNghia - Lab3

--- a/Lab3/src/main/resources/templates/staff-detail.html
+++ b/Lab3/src/main/resources/templates/staff-detail.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <img th:src="@{|/static/${staff.photo}|}"><hr>
+        <img th:src="@{'/images/' + ${staff.photo}}" style="width:50%"><hr>
         Email:
         <b th:text="${staff.id}"></b><hr>
         Họ và tên:
