--- a/Lab3/src/main/resources/templates/staff-list.html
+++ b/Lab3/src/main/resources/templates/staff-list.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div th:each="staff, st : ${list}">
-        <img th:src="@{|/static/${staff.photo}|}" style="height:40px">
+        <img th:src="@{|/images/${staff.photo}|}" style="height:40px">
         <b th:text="@{|${st.count}. |}"></b>
         <b th:text="${#strings.capitalizeWords(staff.fullname)}"></b>,
         $<b th:text="${#numbers.formatDecimal(staff.salary, 0, 'COMMA', 2,
